# conductor

./: CLAUDE.md  README.md  pyproject.toml
docs/: index.md  roadmap.md
documentation/: mkdocs.yml
documentation/docs/: configuration.md  contributing.md  index.md  roadmap.md
documentation/docs/agents/: claude.md  codex.md  custom.md  index.md
documentation/docs/api/: agent.md  index.md  result.md  supervisor.md  task.md
documentation/docs/cli/: agents.md  index.md  orchestrate.md  run.md
documentation/docs/concepts/: agents.md  index.md  results.md  supervisor.md  tasks.md
documentation/docs/getting-started/: index.md  installation.md  quickstart.md
documentation/docs/patterns/: consensus.md  handoff.md  index.md  parallel.md  sequential.md
documentation/docs/stylesheets/: extra.css
src/agent/: __init__.py  __main__.py
src/agent/agents/: __init__.py  claude.py  codex.py
src/agent/cli/: __init__.py  main.py
src/agent/core/: __init__.py  agent.py  result.py  task.py
src/agent/orchestration/: __init__.py  supervisor.py
src/agent/orchestration/patterns/: __init__.py  sequential.py
src/agent/plugins/: __init__.py
src/agent/utils/: __init__.py  process.py
